Bug 980372 - Remove main thread assertion from FileSystem task dtor. r=dhylands